fixing mobile alignment

--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ header img{
 }
 
 #about img {
-  width:200px;
+  width:15%;
 }
 
 .bio {
